fixed title size on mobile

--- a/Programming/My Websites/Scoreboardle/styles.css
+++ b/Programming/My Websites/Scoreboardle/styles.css
@@ -105,7 +105,7 @@ li {
 
   @media screen and (max-width: 600px) {
     h1 {
-        font-size: 2.5rem;
-        letter-spacing: .5rem;
+        font-size: 2rem;
+        letter-spacing: .2rem;
     }
   }
